[build-system]
requires = ["setuptools>=65.5.1", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "."

[project]
dynamic = ["version"]
name="art-konflux-build-history"
authors = [
    {name = "AOS ART Team", email = "aos-team-art@redhat.com"},
]
description = "Web application to search and display Konflux build records"
requires-python = ">=3.11"
keywords = ["openshift", "konflux",]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Flask",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Natural Language :: English",
]
dependencies = [
    "artcommon @ git+https://github.com/openshift-eng/art-tools.git@main#subdirectory=artcommon",
    "flask",
    "Flask[async]",
    "pytz"
]

[project.scripts]
elliott = "app:main"

[project.urls]
homepage = "https://github.com/openshift-eng/art-tools/tree/main/elliott"
repository = "https://github.com/openshift-eng/art-tools.git"
